fixed header spacing

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ html, body {
   position: relative;
   width: 100%;
   height: 800px;
+  padding-top: 40px;
 }
 .Header {
   width: 80%;
@@ -328,7 +329,9 @@ html, body {
     background-color: #F7FFF3;
     overflow-x: hidden;
 }
-
+.Hero {
+  padding-top: 0;
+}
 /* Mobile Header Styles */
 .Header {
     width: 100%;
